feat(loader,cli): boot banner + `doctor` environment health check (1.0.0-RC polish)
BootBanner: a concise, dependency-free framed ASCII banner logged once at
FMLConstructModEvent, printing the framework version and the live status of each
acceleration tier (SIMD / AppCDS / Vulkan / compute tier) from the real probes.
Never spams the log.

aetherium doctor: scans the host for readiness — Java 21+, --enable-preview,
the jdk.incubator.vector SIMD module, and FFM native access — with per-check
OK/WARN and a final READY / NEEDS ATTENTION diagnosis.

Refreshed docs/{en,ru}/cli.md command tables; .gitignore ignores .aetherium/.