@@ -25,6 +25,13 @@ The CLI runs with `--enable-preview` and `--enable-native-access=ALL-UNNAMED` (F
 | `init <name>` | Scaffold a new Aetherium-compatible mod project (zero boilerplate). |
 | `analyze <path>` | Statically verify a `.class` / `.jar` / directory against loader constraints. |
 | `selftest` | Bytecode-engine end-to-end simulation (read → transform → verify → load → invoke). |
+| `inject` | Fluent injector self-test: cancellation, DAG ordering + Semantic Merger, sandbox revert. |
+| `simd` | Report the SIMD lane width and verify the Vector API path equals scalar. |
+| `cdscache [test]` | AppCDS zero-parse cache status, or the store→reopen→warm-hit round-trip test. |
+| `profile` | Verify ephemeral JFR probes (zero overhead off, JFR fires on, hot-swap). |
+| `security` | Verify the capability-based CIA-triad guards (default-deny, FFM bounds, reflection). |
+| `doctor` | Check this host's readiness (Java 21+, `--enable-preview`, Vector API, FFM native access). |
+| `entitysim [n]` | Data-oriented entity stress test (default 10000 entities). |
 | `preflight` | Framework Pre-Flight Check (ASM + native + capability tier). |
 | `chaos [n]` | Chaos Engineering stress test (default 600 simulated mods). |
 | `--help`, `-h`, `help` | Show the help menu. |
